# Benchmarkr-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  benchmarkrDev-config.cmake
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
CMake/: Setup.cmake  Windows.cmake  dependencies.cmake
cmake/: dependencies.cmake  install.cmake  linux.cmake  version.h.in
include/benchmarkr/: command.h  help.h  init-context.h  init.h  init_context.h  print_version.h  test_connection.h  upload.h  upload_watch.h  variable_resolver.h
include/benchmarkr-common/: defaults.h  global_test_context.h  system.h  system_context.h  util.h
include/benchmarkr-common/resolver/: cli_args.h  default_resolver.h  environment_resolver.h  remote_config.h  remote_config_resolver.h  resolver.h
include/benchmarkr-dev/: benchmarkr.h  result.h  results.h  significant_results.h  test.h  test_context.h  test_filter.h
include/benchmarkr-dev/console/: console.h  ser_des.h  silent_console.h  simple_console.h  verbose_console.h
scripts/: macos_install.sh  ubuntu_install.sh  windows_install.bat
src/: CMakeLists.txt
src/benchmarkr/: CMakeLists.txt  benchmarkr.cpp  benchmarkr.h  benchmarkr_pch.h  command.cpp  help.cpp  init-context.cpp  init.cpp  init_context.cpp  main.cpp  print_version.cpp  test_connection.cpp  upload.cpp  upload_watch.cpp  variable_resolver.cpp
src/benchmarkr-common/: CMakeLists.txt  benchmarkr_common_pch.h  global_test_context.cpp  system.cpp  system_lin.cpp  system_mac.cpp  system_win.cpp  util.cpp  util_lin.cpp  util_win.cpp
src/benchmarkr-common/resolver/: cli_args.cpp  default_resolver.cpp  environment_resolver.cpp  remote_config.cpp  remote_config_resolver.cpp  resolver.cpp
src/benchmarkr-dev/: CMakeLists.txt  benchmarkr.cpp  benchmarkr_dev_pch.h  result.cpp  results.cpp  significant_results.cpp  test.cpp  test_context.cpp  test_filter.cpp
src/benchmarkr-dev/console/: silent_console.cpp  simple_console.cpp  verbose_console.cpp
src/test/: CMakeLists.txt  benchmark_integration_tests.cpp  benchmarkr_unit_tests.cpp
test/: CMakeLists.txt
test/benchmarkr-common/: CMakeLists.txt  benchmarkr_common_tests_pch.h  global_test_context_root_test.cpp  resolver_tests.cpp  system_root_test.cpp  system_test.cpp  unit_test.cpp  util_tests.cpp
test/benchmarkr-dev/: CMakeLists.txt  benchmarkr_dev_integration_test_pch.h  integration_test.cpp  result_test.cpp  test_context_test.cpp  test_test.cpp  unit_test.h
